fixed bug in transfert inter magazin and implements of regle transfert

--- a/lib/css/custom.css
+++ b/lib/css/custom.css
@@ -195,6 +195,7 @@
 }
 body .container.body .right_col {
   background: #F7F7F7;
+  background: #fff;
 }
 .nav-md .container.body .right_col {
   padding: 10px 20px 0;
